Tue Feb 22 18:03:41 2005  Steve Huston  <shuston@riverace.com>

	* ace/Ping_Socket.cpp: Rather than try to use struct ip, which can
	  change subtly between platforms, use the well-known layout of the
	  IP header to pick off the length field. This avoids a maze of
	  #if blocks to use the platform struct properly at the cost of
	  using low-level details.

Tue Feb 22 21:30:04 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Link.cpp: Replaced assignment of auto_ptr's
	  with a call to reset() in search for a way around VxWorks' broken
	  implementation.

Tue Feb 22 21:20:22 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Stack.cpp:
	* protocols/ace/RMCast/Stack.h: Moved implementation of functions
	  from .h to .cpp. This should get rid of warnings in VC7.1 build.

Mon Feb 21 18:18:29 2005  Steve Huston  <shuston@riverace.com>

	* configure.ac: Added a check for the need to add _NO_BITFIELDS to
	  compile macros. This is needed to prevent compile errors on
	  Visual Age C++ on AIX. Without it, the check for need to alter
	  TCP header file includes gets the wrong answer, then the build
	  tries the wrong thing. This gets around having to know the
	  TCP header issue apriori like we do with the hand config.h.

	  Changed the ACE_HAS_DEV_POLL test from a check for the /dev/poll
	  file to a run-test to be able to open it. The file is there on
	  HP-UX, but not useable til some patches are installed.

	  Fixed a missing set of quotes on $ace_user_with_ssl.

	* ace/Asynch_Acceptor.cpp (ACE_Asynch_Accept::handle_accept): Don't
	  try to restart an accept if the listen socket is closed. Together
	  with closing the socket in the destructor, prevents errors at
	  destructor time from trying to restart an accept.

	* ace/Dev_Poll_Reactor.cpp: Include <sys/devpoll.h> if not on
	  Linux, not only if on Solaris. Allows this to work on other
	  /dev/poll-enabled platforms.
